# ipapi-python

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: asn-and-dns.md  domain-age.md  email-validation.md  error-handling.md  fraud-risk-scoring.md  ip-geolocation.md  vpn-proxy-tor.md
examples/: smoke.py
src/ipapi_io/: __init__.py  client.py  errors.py  types.py  version.py
tests/: test_client.py
