[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ip-api-io"
version = "1.0.0"
description = "Official Python client for ip-api.io — IP geolocation, email validation, fraud detection and risk scoring API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ip-api.io" }]
requires-python = ">=3.9"
keywords = [
  "ip geolocation",
  "ip api",
  "geoip",
  "email validation",
  "fraud detection",
  "risk score",
  "vpn detection",
  "tor detection",
  "whois",
  "asn lookup",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://ip-api.io"
Documentation = "https://ip-api.io/docs/python"
Repository = "https://github.com/ip-api-io/ipapi-python"
Changelog = "https://github.com/ip-api-io/ipapi-python/blob/main/CHANGELOG.md"

[dependency-groups]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/ipapi_io"]
